k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beacon
  namespace: beacon
  labels:
    app: beacon
spec:
  type: ClusterIP
  selector:
    app: beacon
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
